--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@types/multer": "^1.4.12",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "prisma": "^6.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   }
 }
