chore(package): Update test scripts and include tests directory in tsconfig for improved testing workflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,9 @@
         "@utils/*": ["utils/*"],
         "@dto/*": ["dto/*"],
         "@validations/*": ["validations/*"],
+        "@tests/*": ["./tests/*"]
       }
 
-    }
+    },
+    "include": ["src/**/*", "tests/**/*"]
   }
