--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "bun run ./src/main.ts",
     "dev": "bun --watch --smol run ./src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
     "build": "bun build ./server.ts --outdir ./dist --target bun",
     "prsima:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
